--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -31,25 +31,25 @@
     </div>
     <div id="slideRectWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:'1px'; padding-top:'1px';">
       <span id="slideRectSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt';">
-        <span>#</span><span ng-hide="(editZoneMode == '{{annZoneID}}')">{{tagName}}</span>
+        <span>#</span><span ng-hide="(inEditMode)">{{tagName}}</span>
       </span>
     </div>
-    <div id="slideRectEditWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px" ng-hide="editZoneMode != '{{annZoneID}}'">
+    <div id="slideRectEditWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px" ng-hide="inEditMode">
       <span id="slideRectEditSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
-        <span>#</span><span ng-hide="(editZoneMode == '{{annZoneID}}')">{{tagName}}</span>
-        <input type="text" id="rectEditInputField-{{divCounter}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editTagNameTemp" ng-hide="(editZoneMode != '{{id}}')"></input>
+        <span>#</span><span ng-hide="(inEditMode)">{{tagName}}</span>
+        <input type="text" id="rectEditInputField-{{divCounter}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editTagNameTemp" ng-hide="(!inEditMode)"></input>
       </span>
-      <span id="editSpan-{{divCounter}}" class="glyphicon glyphicon-pencil" aria-hidden="true" ng-click="setEditZoneMode(annZoneId,divCounter,color);" ng-hide="(editZoneMode == '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      <span id="editSpan-{{divCounter}}" class="glyphicon glyphicon-pencil" aria-hidden="true" ng-click="setEditZoneMode(annZoneId,divCounter,color);" ng-hide="(inEditMode)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
       <span id="cancelSaveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="resetEditZoneMode()"
-      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      ng-hide="(!inEditMode)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
       <span id="saveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="updateAnnZone('{{annZoneId}}')"
-      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      ng-hide="(!inEditMode)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
     </div>
     <div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
       <span id="slideRectCreateSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
         <span>#</span><input type="text" id="rectInputField-{{divCounter}}" class="slideRectInput" ng-model="tagNameList['rect-{{divCounter}}']" style="color:'black';transition:'width 0-25s';border:'0'"/>
       </span>
-      <div ng-hide="editZoneMode != '{{annZoneID}}'">
+      <div ng-hide="!inEditMode">
         <select id="colorPickerEdit-{{divCounter}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
           <option value="#ac725e">#ac725e</option>
           <option value="#d06b64">#d06b64</option>
