--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -45,7 +45,7 @@
       <span id="saveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="updateAnnZone('{{annZoneId}}')"
       ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
     </div>
-    <div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
+    <!--<div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
       <span id="slideRectCreateSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
         <span>#</span><input type="text" id="rectInputField-{{divCounter}}" class="slideRectInput" ng-model="tagNameList['rect-{{divCounter}}']" style="color:'black';transition:'width 0-25s';border:'0'"/>
       </span>
@@ -80,7 +80,6 @@
       <span id="rectspan-{{divCounter}}" class='slideRectSpan' style="'margin-right':'2pt'">
       <span id="validationIcon-{{divCounter}}" class="validationIcon" aria-hidden="true" style="color:'white'"></span>
       <button class ="btn btn-white btn-link" ng-click="removeAnnotationZone('rect-{{divCounter}}')" style="float:right">X</button>
-    </div>
-      TEST1
+    </div>-->
   </div>
 </div>
