--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -1,7 +1,7 @@
 
 <div movable-pdf="" can-move="{{canMove}}" on-moved="update-ann-zone-pos" ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:#{{color}};'transition': 'background 0.1s linear'" ng-style="{  'top' : relativePositionY * localCanHeight+'px','left' : relativePositionX * localCanWidth+'px','width' : relativeSizeX * localCanWidth+'px', 'height' : relativeSizeY * localCanWidth+'px'}">
   <div id ="caRect-{{divCounter}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
-    <div  ng-hide="!dragable">
+    <div  ng-hide="!dragable && !inEditMode">
       <select id="colorPicker-{{divCounter}}" name="colorpicker-change-background-color" class="slideRectColorPicker" ng-model= "color">
         <option value="#ac725e">#ac725e</option>
         <option value="#d06b64">#d06b64</option>
@@ -39,8 +39,8 @@
         <span>#</span><span ng-hide="(inEditMode)">{{tagName}}</span>
         <input type="text" id="rectEditInputField-{{divCounter}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editTagNameTemp" ng-hide="(!inEditMode)"></input>
       </span>
-      <span id="editSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-pencil" aria-hidden="true" ng-click="localSetEditZoneMode(listId,divCounter,color);" ng-hide="(inEditMode || !canBeEdited)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
-      <span id="cancelSaveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="resetEditZoneMode()"
+      <span id="editSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-pencil" aria-hidden="true" ng-click="localSetEditZoneMode(listId);" ng-hide="(inEditMode || !canBeEdited)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      <span id="cancelSaveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="localResetEditZoneMode(listId)"
       ng-hide="(!inEditMode)" />
       <span id="saveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="updateAnnZone('{{annZoneId}}')"
       ng-hide="(!inEditMode)" />
