--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -29,7 +29,8 @@
                           ann-zone-id="annotationZoneList[key].annZoneId"
                           div-counter="annotationZoneList[key].divCounter"
                           list-id="annotationZoneList[key].id"
-                          set-edit-zone-mode="setEditZoneMode(id,cntr,color)"
+                          set-edit-zone-mode="setEditZoneMode(id)"
+                          local-reset-edit-zone-mode="resetEditZoneMode(id)"
                         ></pdf-annotation-zone>
 
 
