--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -30,7 +30,7 @@
                           div-counter="annotationZoneList[key].divCounter"
                           list-id="annotationZoneList[key].id"
                           set-edit-zone-mode="setEditZoneMode(id)"
-                          local-reset-edit-zone-mode="resetEditZoneMode(id)"
+                          reset-edit-zone-mode="resetEditZoneMode(id)"
                         ></pdf-annotation-zone>
 
 
