--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -31,6 +31,7 @@
                           list-id="annotationZoneList[key].id"
                           set-edit-zone-mode="setEditZoneMode(id)"
                           reset-edit-zone-mode="resetEditZoneMode(id)"
+                          update-ann-zone="updateAnnZone(id)"
                         ></pdf-annotation-zone>
 
 
