--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -29,6 +29,7 @@
                           ann-zone-id="annotationZoneList[key].annZoneId"
                           div-counter="annotationZoneList[key].divCounter"
                           list-id="annotationZoneList[key].id"
+                          switch-show-anno-zones="switchShowAnnoZones"
                           set-edit-zone-mode="setEditZoneMode(id)"
                           reset-edit-zone-mode="resetEditZoneMode(id)"
                           update-ann-zone="updateAnnZone(id)"
