Added annZone delete feature

--- a/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
@@ -37,15 +37,19 @@
         </select>
       </div>
       <span id="slideRectEditSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
-        <span>#</span><span ng-hide="(inEditMode)">{{tagName}}</span>
-        <input type="text" id="rectEditInputField-{{divCounter}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editTagNameTemp" ng-hide="(!inEditMode)"></input>
+        <span>#</span><span ng-hide="(inEditMode || isBeingCreated)">{{tagName}}</span>
+        <input type="text" id="rectEditInputField-{{divCounter}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editTagNameTemp" ng-hide="(!inEditMode)"></input>
+        <input type="text" id="rectSubmitInputField-{{divCounter}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="tagName" ng-hide="(!isBeingCreated)"></input>
       </span>
       <span id="editSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-pencil" aria-hidden="true" ng-click="localSetEditZoneMode(listId);" ng-hide="(inEditMode || !canBeEdited)" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
-      <span id="cancelSaveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="localResetEditZoneMode(listId)"
+      <span id="cancelSaveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="localResetEditZoneMode()"
       ng-hide="(!inEditMode)" />
       <span id="saveSpan-{{divCounter}}" class="slideEditIcon glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="localUpdateAnnZone(listId)"
       ng-hide="(!inEditMode)" />
     </div>
+    <span id="validationIcon-{{divCounter}}" class="validationIcon" aria-hidden="true" style="color:'white'"></span>
+    <button class ="btn btn-white btn-link" ng-click="localRemoveAnnotationZone(listId)" style="float:right" ng-hide="!isBeingCreated">X</button>
+
     <!--<div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
       <span id="slideRectCreateSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
         <span>#</span><input type="text" id="rectInputField-{{divCounter}}" class="slideRectInput" ng-model="tagNameList['rect-{{divCounter}}']" style="color:'black';transition:'width 0-25s';border:'0'"/>
