--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -31,8 +31,9 @@
                           list-id="annotationZoneList[key].id"
                           switch-show-anno-zones="switchShowAnnoZones"
                           set-edit-zone-mode="setEditZoneMode(id)"
-                          reset-edit-zone-mode="resetEditZoneMode(id)"
+                          reset-edit-zone-mode="resetEditZoneMode()"
                           update-ann-zone="updateAnnZone(id)"
+                          remove-annotation-zone="removeAnnotationZone(id)"
                         ></pdf-annotation-zone>
 
 
