added small fade effect on color change

--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -35,6 +35,9 @@
 .annoEditEffect {
     opacity: 0.75;
     border:1px dashed white;
+    transition: background-color .1s linear;
+    -moz-transition: background-color .1s linear;
+    -webkit-transition: background-color .1s linear;
 }
 
 
@@ -208,6 +211,7 @@ input#searchInput{
 .slideRect1{
   min-width: 126px;
   min-height: 30px;
+
 }
 .btn-white{
      color: #FFF;
