--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -30,6 +30,7 @@
                           div-counter="annotationZoneList[key].divCounter"
                           list-id="annotationZoneList[key].id"
                           switch-show-anno-zones="switchShowAnnoZones"
+                          tag-name-is-validated="annotationZoneList[key].tagNameIsValidated"
                           set-edit-zone-mode="setEditZoneMode(id)"
                           reset-edit-zone-mode="resetEditZoneMode()"
                           update-ann-zone="updateAnnZone(id)"
