--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -35,6 +35,7 @@
                           reset-edit-zone-mode="resetEditZoneMode()"
                           update-ann-zone="updateAnnZone(id)"
                           remove-annotation-zone="removeAnnotationZone(id)"
+                          add-reference="addReference(id)"
                         ></pdf-annotation-zone>
 
 
