--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -1,5 +1,5 @@
-<div movable-pdf="" can-move="{{canMove}}" on-moved="update-ann-zone-pos" ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} ng-class="{true: 'annoFadeEffect', false:'annoEditEffect'}[!inEditMode && !isBeingCreated]" class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;'transition': 'background 0.1s linear'" ng-style="{  'background-color': color, 'top' : relativePositionY * localCanHeight+'px','left' : relativePositionX * localCanWidth+'px','width' : relativeSizeX * localCanWidth+'px', 'height' : relativeSizeY * localCanWidth+'px'}">
-  <div id ="caRect-{{divCounter}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
+<div movable-pdf="" can-move="{{canMove}}" on-moved="update-ann-zone-pos" ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} ng-class="{true: 'annoFadeEffect', false:'annoEditEffect'}[!inEditMode && !isBeingCreated]" class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;'transition': 'background 0.1s linear'" ng-style="{  'background-color': color, 'top' : relativePositionY * localCanHeight+'px','left' : relativePositionX * localCanWidth+'px','width' : relativeSizeX * localCanWidth+'px', 'height' : relativeSizeY * localCanWidth+'px'}"  ng-click="localAddReference(listId)">
+  <div id ="caRect-{{divCounter}}" class="caRect" style= "width:'100%';height:'100%'">
 
     <!--<div id="slideRectWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:'1px'; padding-top:'1px';">
       <span id="slideRectSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt';">
@@ -48,7 +48,7 @@
       <span id="validationIcon-{{divCounter}}" ng-hide="!isBeingCreated" class="validationIcon glyphicon" ng-class="{true: 'glyphicon-ok-sign', false: 'glyphicon-remove-sign'}[tagNameIsValidated]" aria-hidden="true" style="color:'white'"></span>
     <button class ="btn btn-white btn-link" ng-click="localRemoveAnnotationZone(listId)" style="float:right" ng-hide="!isBeingCreated">X</button>
     </div>
-    
+
 
 
     <!--<div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
