show login form when not login on oauth permission

--- a/views/admin-lte/oauth/oHeader.ejs
+++ b/views/admin-lte/oauth/oHeader.ejs
@@ -31,7 +31,7 @@ layout-top-nav | fixed | sidebar-collapse
 <body class="skin-blue sidebar-collapse">
 <header class="main-header">
     <!-- Logo -->
-    <a href="/" class="logo"><b>Course</b>Mapper</a>
+    <a href="#" class="logo"><b>Course</b>Mapper</a>
     <nav class="navbar navbar-static-top" role="navigation">
     </nav>
 
